--- a/restful-api/templates/_footer.html
+++ b/restful-api/templates/_footer.html
@@ -4,7 +4,7 @@
 
 
         <div class="footer">
-            <div class="copyrigth">
+            <div class="copyright">
                 Copyrigth {global.yearCreated} {global.companyName} | All rigths reserved.
             </div>
 
