--- a/restful-api/templates/index.html
+++ b/restful-api/templates/index.html
@@ -1,2 +1,12 @@
 
-<h1>{body.title}</h1>
+<h1>Uptime Monitoring</h1>
+<h2>Made simple</h2>
+
+<div class="blurb">
+    We offer uptime monitoring for HTTP/HTTPS
+</div>
+
+<div class="ctaWrapper">
+    <a class="cta green" href="account/create">Get started</a>
+    <a class="cta blue" href="session/create">Login</a>
+</div>
