--- a/restful-api/templates/_header.html
+++ b/restful-api/templates/_header.html
@@ -17,34 +17,37 @@
     <link rel="stylesheet" href="public/app.css">
 </head>
 <body class="{body.class}">
-    <!-- page wrapper -->
+    <!-- Page Wrapper -->
     <div class="wrapper">
-
+        <!-- Header -->
         <div class="header">
-            <a class="logo" href="/">
-                <img src="public/logo.png" alt="logo">
-            </a>
-            <!-- navigation -->
-            <ul class="menu">
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a class="loggedOut" href="/account/create">Signup</a>
-                </li>
-                <li>
-                    <a class="loggedOut" href="/session/create">Login</a>
-                </li>
-                <li>
-                    <a class="loggedIn" href="/checks/all">Dashboard</a>
-                </li>
-                <li>
-                    <a class="loggedOut" href="/account/edit">Account settings</a>
-                </li>
-                <li>
-                    <a class="loggedOut" href="#">Logout</a>
-                </li>
-            </ul>
+          <!-- Logo -->
+          <a class="logo" href="/">
+            <img src="public/logo.png" alt="Logo" />
+          </a>
+          <!-- Navigation -->
+          <ul class="menu">
+            <li>
+              <a href="/">Home</a>
+            </li>
+            <li class="loggedOut">
+              <a href="/account/create">Signup</a>
+            </li>
+            <li class="loggedOut">
+              <a href="/session/create">Login</a>
+            </li>
+            <li class="loggedIn">
+              <a href="/checks/all">Dashboard</a>
+            </li>
+            <li class="loggedIn">
+              <a href="/account/edit">Account Settings</a>
+            </li>
+            <li class="loggedIn">
+              <a href="#" id="logoutButton">Logout</a>
+            </li>
+          </ul>
+  
+          <div class="clear"></div>
         </div>
 
         <!-- page content -->
